# openrabbit

./: .gitignore  .openrabbit.example.yaml  README.md  conftest.py  pyproject.toml  sbom.json
.claude/handoffs/: handoff-2026-06-14-2232-openrabbit-prd-autoloop.md  handoff-2026-06-15-1008-openrabbit-prd-complete.md
.github/: dependabot.yml
.github/workflows/: ci.yml  reusable-workflow.yml  scorecard.yml
actions/: action.yml  reusable-workflow.yml
cli/gh-openrabbit/: gh-openrabbit
docs/: configuration.md  onboarding.md  security.md  tuning-guide.md  usage.md
docs/superpowers/specs/: 2026-06-14-openrabbit-design.md
examples/: sample.diff
openrabbit/: __init__.py  bedrock_models.py  cli.py  config.py  domain.py  finding.schema.json  findings.py  init.py  learnings.py  lenses.py  pricing.py
openrabbit/adapters/: __init__.py  checkrun.py  github.py  sarif.py
openrabbit/app/: __init__.py  auth.py  server.py  webhook.py
openrabbit/eval/: __init__.py  controls.py  golden_set.py  judge.py  runner.py  scorecard.py
openrabbit/index/: __init__.py  embeddings.py  symbols.py
openrabbit/pipeline/: __init__.py  context.py  dedup.py  emit.py  enclosing.py  gate.py  orchestrator.py  route.py  run_lenses.py  verify.py  walkthrough.py
openrabbit/providers/: __init__.py  base.py  converse.py  openai_responses.py
org/: README.md  ruleset.json  safe-settings.yml
org/.github/workflow-templates/: openrabbit.properties.json  openrabbit.yml
plugin/: README.md
plugin/.claude-plugin/: marketplace.json  plugin.json
scripts/: generate_sbom.sh
skills/lenses/correctness/: SKILL.md
skills/lenses/maintainability/: SKILL.md
skills/lenses/performance/: SKILL.md
skills/lenses/security/: SKILL.md
skills/lenses/tests/: SKILL.md
skills/openrabbit-review/: SKILL.md
tests/: test_action_yaml.py  test_app_auth.py  test_app_server.py  test_app_webhook.py  test_bedrock_models.py  test_ci_config.py  test_cli_commit_required.py  test_cli_config_trust_boundary.py  test_cli_eval_fixture_mode.py  test_cli_live_wiring.py  test_config.py  test_docs.py  test_domain.py  test_enclosing.py  test_fence_injection.py  test_findings.py  test_incremental_state.py  test_index_embeddings.py  test_index_symbols.py  test_init.py  test_learnings.py  test_lenses.py  test_org_templates.py  test_pipeline_integration.py  test_plugin_manifest.py  test_pricing.py  test_walkthrough.py
tests/adapters/: test_checkrun.py  test_github.py  test_github_anchor.py  test_sarif.py
tests/ci/: test_action_region.py  test_action_wiring.py  test_base_ref_e2e_resolution.py  test_base_ref_wiring.py  test_ci_model_wording.py  test_gh_extension.py
tests/eval/: test_controls.py  test_golden_honesty.py  test_golden_set.py  test_judge.py  test_judge_honesty.py  test_runner.py  test_runner_honesty.py  test_scorecard.py
tests/live/: __init__.py  conftest.py  test_live_converse_smoke.py  test_live_eval_online_smoke.py  test_live_models_match_shipped.py  test_live_openai_responses_smoke.py
tests/pipeline/: test_context_fence.py  test_emit_anchor.py  test_gate_demo.py  test_response_language.py  test_route_valid_positions.py  test_tool_schemas_are_strict_compliant.py  test_verify_budget_starvation.py  test_verify_provider_error.py  test_verify_refusal.py
tests/providers/: test_base.py  test_converse.py  test_converse_retry_config.py  test_openai_responses.py  test_openai_retry.py
