[project]
name = "openrabbit"
version = "0.0.0"
description = "openrabbit — high-trust, model-neutral AI code review harness (Bedrock-only production)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "openrabbit" }]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "boto3>=1.34",
    "httpx>=0.27",
]

[project.scripts]
openrabbit = "openrabbit.cli:main"

[project.optional-dependencies]
# Optional GitHub App mode (SPEC 1.2 — Phase-4 option). RS256 App-JWT signing
# needs PyJWT + its `crypto` extra (cryptography). Imported LAZILY inside
# openrabbit.app.auth, so the core package imports fine WITHOUT this installed.
app = [
    "PyJWT[crypto]>=2.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "PyJWT[crypto]>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openrabbit"]

[tool.pytest.ini_options]
addopts = "--cov=openrabbit --cov-report=term-missing"
testpaths = ["tests"]
